Correct Align

--- a/style/info.css
+++ b/style/info.css
@@ -146,7 +146,7 @@ p {
   font-size: 16px;
   color: white;
   line-height: 30px;
-  margin-left: -175px;
+  margin-left: -135px;
   margin-top: 60px;
 }
 .section-main .container .main-item.m-4 {
